--- a/FF_Haveservice_automatisering.ipynb
+++ b/FF_Haveservice_automatisering.ipynb
@@ -20,8 +20,8 @@
         "import os\n",
         "\n",
         "# Hvis Colab åbnes af Apps Script, start koden automatisk\n",
-        "if \"COLAB_AUTO_RUN\" in os.environ:\n",
-        "    print(\"🚀 Colab åbnet af Apps Script – starter billedbehandling...\")\n",
+        "if \"RUN_FROM_GITHUB\" in os.environ:\n",
+        "    print(\"🚀 Colab åbnet af GitHub – starter billedbehandling...\")\n",
         "    process_images()  # Kør billedbehandling automatisk\n",
         "else:\n",
         "    print(\"🟢 Colab åbnet manuelt – ingen automatisk start.\")\n",
